<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar_with_statusbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/trans_60px"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/trans_40px">

                <View
                    android:layout_width="@dimen/trans_10px"
                    android:layout_height="@dimen/trans_30px"
                    android:layout_marginRight="@dimen/trans_10px"
                    android:background="@color/color_blue"/>

                <TextView
                    android:id="@+id/tv_seller_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/text_trans_30px"/>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_seller_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/trans_30px"
                android:paddingLeft="@dimen/trans_60px"
                android:paddingTop="@dimen/trans_30px"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_trans_28px"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/trans_40px">

                <View
                    android:layout_width="@dimen/trans_10px"
                    android:layout_height="@dimen/trans_30px"
                    android:layout_marginRight="@dimen/trans_10px"
                    android:background="@color/color_blue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_txt_seller_addtype"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/text_trans_30px"/>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_seller_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/trans_40px"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/trans_20px"
                android:background="@color/color_f5f5f5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/trans_60px"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/trans_40px">

                <View
                    android:layout_width="@dimen/trans_10px"
                    android:layout_height="@dimen/trans_30px"
                    android:layout_marginRight="@dimen/trans_10px"
                    android:background="@color/color_blue"/>

                <TextView
                    android:id="@+id/tv_buyer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/text_trans_30px"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_buyer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/trans_30px"
                android:paddingLeft="@dimen/trans_60px"
                android:paddingTop="@dimen/trans_30px"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_trans_28px"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/trans_40px">

                <View
                    android:layout_width="@dimen/trans_10px"
                    android:layout_height="@dimen/trans_30px"
                    android:layout_marginRight="@dimen/trans_10px"
                    android:background="@color/color_blue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_txt_buyer_coin_add"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/text_trans_30px"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tv_seller_coin_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/trans_30px"
                android:paddingLeft="@dimen/trans_60px"
                android:paddingTop="@dimen/trans_30px"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_trans_28px"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/trans_40px">

                <View
                    android:layout_width="@dimen/trans_10px"
                    android:layout_height="@dimen/trans_30px"
                    android:layout_marginRight="@dimen/trans_10px"
                    android:background="@color/color_blue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_txt_buyer_allcoin_adds"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/text_trans_30px"/>


            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_buyer_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/trans_40px"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
